@@ -1,9 +1,9 @@
-/* attributes.h
+/* console.h
 
    written by Marc Singer
-   10 Feb 2005
+   1 Apr 2006
 
-   Copyright (C) 2005 Marc Singer
+   Copyright (C) 2006 Marc Singer
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License as
@@ -26,12 +26,12 @@
 
 */
 
-#if !defined (__ATTRIBUTES_H__)
-#    define   __ATTRIBUTES_H__
+#if !defined (__CONSOLE_H__)
+#    define   __CONSOLE_H__
 
 /* ----- Includes */
 
-#include <linux/compiler.h>
+#include <attributes.h>
 
 /* ----- Types */
 
@@ -39,17 +39,6 @@
 
 /* ----- Prototypes */
 
+extern struct driver_d* __rodata console;
 
-#define __weak __attribute__((weak))
-#define __naked __attribute__((naked))
-# define __used __attribute_used__
-#define __section(s) __attribute__((section(#s)))
-#define __xbss(s)     __attribute__((section("." #s ".xbss")))
-#define __irq_handler __attribute__((interrupt ("IRQ")))
-#define __fiq_handler __attribute__((interrupt ("FIQ")))
-#define __swi_handler __attribute__((interrupt ("SWI")))
-#define __abort_handler __attribute__((interrupt ("ABORT")))
-#define __undef_handler __attribute__((interrupt ("UNDEF")))
-#define __rodata const __attribute__((section(".rodata")))
-
-#endif  /* __ATTRIBUTES_H__ */
+#endif  /* __CONSOLE_H__ */
