@@ -73,8 +73,8 @@
 #include <apex.h>
 #include <command.h>
 #include <mach/hardware.h>
+#include <console.h>
 
-extern struct driver_d* console;
 
 //#define TALK 1
 
